2011-02-26  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* C-version

2010-10-28  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fiber-mon.gemspec: ちょっと修正

2010-10-28  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fiber-mon.gemspec: 追加

2010-10-22  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* LICENSE, fiber-mob.rb: コピーライトの年を間違っていた.
	* LICENSE: 追加

2010-03-18  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* FiberMon#mon_start: ロックファイルのクラスが間違っていた.
	* FiberMon::Monitor#fiber_yield: FiberMon#fiber_yieldと同じようにした.

2010-03-14  Keiju Ishitsuka  <keiju@ishitsuka.com>
	
	* ちょっと変えた
	
2010-02-23  Keiju Ishitsuka  <keiju@ishituska.com>

	* first version
	
